<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/logostudeer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Login"
        android:textColor="@color/black"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintBottom_toBottomOf="@+id/imageView" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="Username"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_user_24"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="Password"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_lock_24"
            app:helperText="Masukan password anda">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnClear"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/studeer_blue"
            android:text="Clear Field" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/studeer_blue"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:text="LOGIN" />
    </LinearLayout>

<!--    <LinearLayout-->
<!--        android:id="@+id/linearLayout3"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="16dp"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/linearLayout"-->
<!--        app:layout_constraintStart_toStartOf="@+id/linearLayout"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/linearLayout">-->
<!--        <com.google.android.material.button.MaterialButton-->
<!--            android:id="@+id/btnRegister"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:textColor="@color/white"-->
<!--            android:textSize="15dp"-->
<!--            android:text="Belum memiliki akun? Daftar"-->
<!--            android:gravity="center"-->
<!--            app:layout_constraintEnd_toEndOf="@+id/linearLayout"-->
<!--            app:layout_constraintStart_toStartOf="@+id/linearLayout"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>-->
<!--    </LinearLayout>-->

    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="Belum memiliki akun? Daftar"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>